--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,16 @@ pluginGroup = com.github.edejin.emmeteverywhere
 pluginName = Emmet-Everywhere
 pluginVersion = 1.2.6
 pluginSinceBuild = 202
-pluginUntilBuild = 203.*
+pluginUntilBuild = 991.*
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
-pluginVerifierIdeVersions = 2020.2.4, 2020.3.4, 2021.1.1
+pluginVerifierIdeVersions = 2020.2 2020.3 2021.1 2021.2 2021.3 2022.1 2022.2 2022.3 2023.1
 
 platformType = IC
+# Test with old version
 platformVersion = 2020.2.4
+# Test with new version
+# platformVersion = 2022.3
 platformDownloadSources = true
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
@@ -20,3 +23,6 @@ platformPlugins =
 # Opt-out flag for bundling Kotlin standard library.
 # See https://kotlinlang.org/docs/reference/using-gradle.html#dependency-on-the-standard-library for details.
 kotlin.stdlib.default.dependency = false
+
+dependencies.version.graaljs = 22.3.1
+dependencies.version.nashorn = 15.4
